# ai_cv_maker

./: .gitignore  README.md  SPECIFICATIONS.md  package.json  pnpm-lock.yaml
apps/api/: README.md  TESTING.md  pyproject.toml  test_endpoints.sh
apps/api/app/: main.py
apps/api/app/api/: generate.py  health.py
apps/api/app/core/: context.py  metrics.py  normalization.py  observability.py  schemas.py
apps/api/app/middleware/: logging.py  request_id.py
apps/api/app/prompts/: cover_letter.md  load_md_prompt.py  raw_text_normalization.md  resume_json.md
apps/api/app/services/: README.md  llm_client.py
apps/api/tests/: conftest.py  test_llm_client.py  test_schemas.py
apps/api/tests/snapshots/: extract_payload_system_prompt.txt  generate_cover_system_prompt.txt  generate_resume_system_prompt.txt
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/health/: route.ts
apps/web/components/: generate-form.tsx
apps/web/components/generate-form/: index.tsx
apps/web/components/generate-form/components/: error-card.tsx  result-card.tsx  status-card.tsx  text-area-field.tsx
apps/web/components/generate-form/hooks/: use-generate-form.ts
apps/web/components/ui/: button.tsx  select.tsx  textarea.tsx
apps/web/lib/: CoverLetterDocxBuilder.ts  ResumeDocxBuilder.ts
apps/web/utils/constants/: professional_info_placeholder.ts
infra/: docker-compose.yml
templates/: README.md
