[project]
name = "api"
version = "0.1.0"
description = "AI CV Maker API"
authors = [
    {name = "Gabriel Barbosa"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
